fix spacing on example link in problem/solution/action section

--- a/civictechprojects/static/css/partials/_CreateProjectForm.scss
+++ b/civictechprojects/static/css/partials/_CreateProjectForm.scss
@@ -28,3 +28,7 @@
   display: flex;
   justify-content: space-between;
 }
+
+.create-form-project-example {
+  padding-left: 0.5rem;
+}
